cluster-davar-eth/100-eth/30-ethstats/50-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: eth-ethstats
  namespace: data
  labels:
    app: eth-ethstats
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  rules:
    - host: stats.eth.davar.com
      http:
        paths:
          - backend:
              serviceName: eth-ethstats
              servicePort: 8080
            path: /
  tls:
    - hosts:
        - stats.eth.davar.com
      secretName: eth-ethstats-production-tls
